[gd_scene load_steps=8 format=3 uid="uid://bt20qwycijyq8"]

[ext_resource type="Script" uid="uid://bng6wtr6pdw04" path="res://gameplay/minigames/oven.gd" id="1_mhtwf"]
[ext_resource type="PackedScene" uid="uid://07ujs6uw6ish" path="res://gameplay/coreGameplay/MinigameTimer.tscn" id="2_yvqd3"]
[ext_resource type="Texture2D" uid="uid://cgr53jbqgtl0u" path="res://assets/minigames/Oven/Cheeseburger.jpg" id="3_2iomx"]

[sub_resource type="Animation" id="Animation_2pff3"]
resource_name = "Pass"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Cheeseburger:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_16em2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Cheeseburger:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Cheeseburger:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_usjo3"]
resource_name = "Fail"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Cheeseburger:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Cheeseburger:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [3.1415927]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_un7j3"]
_data = {
&"Fail": SubResource("Animation_usjo3"),
&"Pass": SubResource("Animation_2pff3"),
&"RESET": SubResource("Animation_16em2")
}

[node name="Oven" type="Node2D"]
script = ExtResource("1_mhtwf")

[node name="MinigameTimer" parent="." instance=ExtResource("2_yvqd3")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Bar1" type="ProgressBar" parent="CanvasLayer"]
offset_top = 29.0
offset_right = 424.0
offset_bottom = 99.0
max_value = 1.0

[node name="Button" type="Button" parent="CanvasLayer/Bar1"]
layout_mode = 0
offset_left = 424.0
offset_right = 515.0
offset_bottom = 69.0

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Bar1"]
layout_mode = 0
offset_left = 631.0
offset_top = 8.0
offset_right = 671.0
offset_bottom = 48.0

[node name="Bar2" type="ProgressBar" parent="CanvasLayer"]
offset_top = 99.0
offset_right = 424.0
offset_bottom = 169.0
max_value = 1.0

[node name="Button" type="Button" parent="CanvasLayer/Bar2"]
layout_mode = 0
offset_left = 424.0
offset_right = 515.0
offset_bottom = 69.0

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Bar2"]
layout_mode = 0
offset_left = 631.0
offset_top = 8.0
offset_right = 671.0
offset_bottom = 48.0

[node name="Bar3" type="ProgressBar" parent="CanvasLayer"]
offset_top = 169.0
offset_right = 424.0
offset_bottom = 239.0
max_value = 1.0

[node name="Button" type="Button" parent="CanvasLayer/Bar3"]
layout_mode = 0
offset_left = 424.0
offset_right = 515.0
offset_bottom = 69.0

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Bar3"]
layout_mode = 0
offset_left = 631.0
offset_top = 8.0
offset_right = 671.0
offset_bottom = 48.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_un7j3")
}

[node name="Cheeseburger" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(592, 353)
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_2iomx")
